# TicTacToe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
client/: CMakeLists.txt  main.cpp
client/buffor/buffer/: CMakeLists.txt  buffer.cpp  buffer.hpp  bufferTypes.h  bufferUsage.h
client/buffor/sharedBuffer/: CMakeLists.txt  shareBuffer.h  shareBufferContainer.cpp  shareBufferContainer.hpp
client/buffor/sharedBufferInstances/rectangle/: CMakeLists.txt  rectangleEBO.cpp  (+3 more)
client/buffor/vao/: glTypes.h  vao.cpp  vao.hpp
client/engine/: CMakeLists.txt  engine.cpp  engine.hpp
client/engine/KeysHandler/: CMakeLists.txt  keys.cpp  keys.hpp  keysHandler.cpp  keysHandler.hpp
client/engine/fpsShow/: CMakeLists.txt  fps.cpp  fps.hpp
client/engine/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp
client/engine/window/: CMakeLists.txt  window.cpp  window.hpp
client/objects/: CMakeLists.txt  drawable.hpp  mesh.hpp  updatable.hpp
client/objects/closeWindow/: CMakeLists.txt  closeWindow.cpp  closeWindow.hpp
client/objects/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.hpp
client/objects/triangle/: triangle.cpp  triangle.hpp
client/program/: parameter.h  program.cpp  program.hpp
client/program/shader/: CMakeLists.txt  shader.cpp  shader.hpp  shaderType.h
client/program/sharedProgram/: CMakeLists.txt  shareProgram.h  shareProgramContainer.cpp  shareProgramContainer.hpp
client/program/sharedProgramInstances/: CMakeLists.txt  programColored.cpp  programRed.cpp  programs.hpp
client/utils/color/: CMakeLists.txt  color.hpp
client/utils/position2D/: CMakeLists.txt  position2D.cpp  position2D.hpp  position2DWithColor.h
client/utils/triangleFace/: CMakeLists.txt  triangleFace.cpp  triangleFace.hpp
debug/: CMakeLists.txt  my_assert.h  my_float_to_string.h  my_log.cpp  my_log.h
src/client/: CMakeLists.txt  main.cpp
src/client/OpenGL/color/: CMakeLists.txt  color.cpp  color.hpp
src/client/OpenGL/engine/: CMakeLists.txt  engine.cpp  engine.hpp  engineConstructor.h
src/client/OpenGL/engine/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp  glfwConstructor.h
src/client/OpenGL/engine/window/: CMakeLists.txt  window.cpp  window.hpp  windowConstructor.h
src/client/OpenGL/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/client/OpenGL/mesh/meshes/ColoredSquare/: CMakeLists.txt  coloredSquare.cpp  coloredSquare.hpp  coloredSquareData.h
src/client/OpenGL/mesh/meshes/square/: CMakeLists.txt  square.cpp  square.hpp  squareData.h
src/client/OpenGL/mesh/meshes/triangle/: CMakeLists.txt  triangle.cpp  triangle.hpp  triangleData.h
src/client/OpenGL/program/: CMakeLists.txt  program.cpp  program.hpp
src/client/OpenGL/program/shader/: CMakeLists.txt  shader.cpp  shader.hpp
src/client/OpenGL/program/shader/coloredVertices/: CMakeLists.txt  _shaderColoredVertices.h  f_coloredVertices.GLSL  v_coloredVertices.GLSL
src/client/OpenGL/program/shader/redColor/: CMakeLists.txt  _shaderColorRed.h  f_redColor.GLSL  v_redColor.GLSL
src/client/OpenGL/program/staticContainer/: programContainer.cpp  programContainer.hpp  programEnum.h
src/client/OpenGL/struct/color/: color.hpp
src/client/OpenGL/struct/position/: CMakeLists.txt  position2d.hpp
src/client/OpenGL/struct/triangleID/: triangleID.hpp
src/client/OpenGL/vao/: CMakeLists.txt  vao.cpp  vao.hpp
src/client/OpenGL/vao/vbo/: CMakeLists.txt  vbo.cpp  vbo.hpp
src/client/OpenGL/vao/vbo/staticContainer/: vboContainer.cpp  vboContainer.hpp  vboEnum.h
src/client/OpenGL/vao/vbo/staticVBO/: timeVBO.hpp
src/client/OpenGl/: GLFW.cpp  Shader.cpp  Window.cpp
src/client/OpenGl/Shaders/: CMakeLists.txt  fragmentShader.GLSL  vertexShader.GLSL
src/client/Shaders/: fragmentShader.GLSL  vertexShader.GLSL
src/client/engine/: CMakeLists.txt  engine.cpp  engine.hpp  engineParam.h
src/client/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp  glfwParam.h
src/client/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
src/client/program/: CMakeLists.txt  program.cpp  program.hpp
src/client/shader/: CMakeLists.txt  shader.cpp  shader.hpp
src/client/shader/fragmentShader/: CMakeLists.txt  fragmentShader.GLSL
src/client/shader/vertexShader/: CMakeLists.txt
src/client/src/: glfw.cpp  glfw.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  window.cpp  window.hpp
src/client/struct/: CMakeLists.txt  color.h  triangle.h
src/client/vArray/: CMakeLists.txt  vertexArray.cpp  vertexArray.hpp
src/client/vBuffer/: CMakeLists.txt  vertexBuffer.cpp  vertexBuffer.hpp
src/client/window/: CMakeLists.txt  window.cpp  window.hpp  windowParam.h
(+11 files in other folders)
