add_library(${PROJECT_NAME}-Debug STATIC my_log.h my_log.cpp my_assert.h my_float_to_string.h)
target_compile_options(${PROJECT_NAME}-Debug PRIVATE ${FLAGS})
target_include_directories(${PROJECT_NAME}-Debug PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_compile_features(${PROJECT_NAME}-Debug PRIVATE "cxx_std_23")
set_target_properties(${PROJECT_NAME}-Debug PROPERTIES LINKER_LANGUAGE CXX)
